# med-compass

./: pyproject.toml
data/mimic-iii-clinical-database-demo-1.4/: NOTEEVENTS.csv
src/clinical_nlp/data/: __init__.py  exceptions.py  ingestion.py  loaders.py  main.py  models.py  preprocessors.py  validators.py
src/clinical_nlp/nlp/: __init__.py  entity_extraction.py  preprocessing.py  topic_modeling.py
src/clinical_nlp/test/: test_ner_pipeline.py
