[tool.poetry]
name = "clinical-nlp-pipeline"
version = "0.1.0"
description = "Clinical NLP Pipeline"
authors = ["Ashwin Dhanasamy <ashwindhanasamy@gmail.com>"]
packages = [{include = "clinical_nlp", from = "src"}]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^2.0.0"
numpy = "^1.24.0"
pydantic = "^2.0.0"
regex = "^2023.6.3"
nltk = "^3.8.0"
pyspellchecker = "^0.7.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
